# ytt

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sample.md  setup.py
tests/: test_formatter.py  test_utils.py
yt_transcript/: __init__.py  cli.py  completions.py  extractor.py  formatter.py  manual.py  templates.py  utils.py
